--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "highlight.js": "^11.6.0",
     "mongoose": "^6.6.1",
     "next": "12.2.5",
+    "next-auth": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-one-tap-login": "^0.1.1",
